k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3 # nr of pods the deployment has to make
  selector: # this is for the master to refer to the object created (using the label specified)
    matchLabels:
      component: server # this key-value pair can be arbitrary
  template: #configuration used for every single pod
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: fracc/multi-server
          ports:
            - containerPort: 5000
