k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # nr of pods the deployment has to make
  selector:  # this is for the master to refer to the object created (using the label specified)
    matchLabels:
      component: worker
  template: #configuration used for every single pod
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: fracc/multi-worker
