k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: # provide access to the given services here (using the name of component)
    component: web
  ports:
    - port: 3000
      targetPort: 3000 # no nodePort (no access from the outside word)
